test/fixtures/valid/test-style-host-mixed.fez
<style>
  :host { color: red; }
  :host button { color: blue; }
</style>

<button>hi</button>
