test/fixtures/invalid/test-style-unclosed-brace.fez
<script>
  init() {}
</script>

<div>hello</div>

<style>
  .root {
    padding: 1rem;
    .nested {
      color: red;
    /* missing closing brace for .nested */
  }
</style>
